--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@using System.Diagnostics
 @using SpaceAdventures.MVC.Models.Enums
+@using Microsoft.AspNetCore.Http;
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,6 +17,8 @@
 </head>
 
 <span id="message" class="d-none">@TempData["Message"]</span>
+
+<p>@ViewContext.HttpContext.Session.GetString("Role")</p>
 
 
 <body class="bg"style="background-image: url('/backgrounds/backround_2.jpg')">
@@ -42,7 +45,7 @@
 
 
 
-                @if (User.Identity.IsAuthenticated && @TempData["Role"]!.ToString() != RolesType.User.ToString())
+                @if (User.Identity.IsAuthenticated && @ViewContext.HttpContext.Session.GetString("Role") != RolesType.User.ToString())
                 {
                     <li class="nav-item">
                         <a class="nav-link mx-2" asp-controller="Home" asp-action="Dashboard"><i class="fas fa-tachometer-alt m-1"></i>Dashboard</a>
@@ -50,7 +53,7 @@
 
                     /***  Users DropdownList ***/
 
-                    @if (@TempData["Role"]!.ToString() != RolesType.Agent.ToString() && @TempData["Role"]!.ToString() != RolesType.User.ToString())
+                    @if (@ViewContext.HttpContext.Session.GetString("Role") != RolesType.Agent.ToString() && @ViewContext.HttpContext.Session.GetString("Role") != RolesType.User.ToString())
                     {
                         <li class="nav-item dropdown">
                             <a class="nav-link mx-2 dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -61,7 +64,7 @@
                                     <a class="dropdown-item" asp-controller="UserManagement" asp-action="GetAllUsers"> <i class="fa-solid fa-list m-2"></i> All</a>
                                 </li>
 
-                                @if (TempData["Role"].ToString() != RolesType.Agent.ToString() && TempData["Role"].ToString() != RolesType.Admin.ToString())
+                                @if (@ViewContext.HttpContext.Session.GetString("Role") != RolesType.Agent.ToString() && @ViewContext.HttpContext.Session.GetString("Role") != RolesType.Admin.ToString())
                                 {
                                     <li>
                                         <a class="dropdown-item" asp-controller="" asp-action=""> <i class="fa-solid fa-eye m-2"></i> Assign Role</a>
@@ -90,7 +93,7 @@
                                 <a class="dropdown-item" asp-controller="" asp-action=""><i class="fa-solid fa-list m-2"></i> All</a>
                             </li>
 
-                            @if (TempData["Role"].ToString() != RolesType.Agent.ToString())
+                            @if (@ViewContext.HttpContext.Session.GetString("Role") != RolesType.Agent.ToString())
                             {
                                 <li>
                                     <a class="dropdown-item" asp-controller="Booking" asp-action="Index"> <i class="fa-solid fa-plus m-2"></i>New</a>
@@ -154,7 +157,7 @@
                         <a class="nav-link btn btn-sm btn-outline-light mx-1" asp-controller="Account" asp-action="Logout"> <i class="fa-solid fa-user-astronaut m-1"></i>Logout</a>
                     </li>
                     <li>
-                        <a class="nav-link mt-1 text-sm-start"> @User.Identity.Name | @TempData["Role"]</a>
+                        <a class="nav-link mt-1 text-sm-start"> @User.Identity.Name | @ViewContext.HttpContext.Session.GetString("Role")</a>
                     </li>
                 }
                 else
