--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UserSignUp.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UserSignUp.cshtml
@@ -74,7 +74,7 @@
     </div>
             
     <div class="form-group m-2 text-center mt-5">
-        <input id="sign-up" type="submit" value="Sign Up" class="btn btn-info" /> | <a class="btn btn-  " asp-controller="Home" asp-action="Index">Home page</a>
+        <input id="sign-up" type="submit" value="Sign Up" class="btn btn-info" /> | <a class="btn btn-dark  " asp-controller="Home" asp-action="Index">Home page</a>
     </div>
 </form>
 
