--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/CreateBooking.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/CreateBooking.cshtml
@@ -37,9 +37,20 @@
             </div>
             <div class="form-group">
                 <label asp-for="IdFlight" class="control-label text-white"></label>
-                @Html.DropDownListFor(x => Model.IdItinerary, new SelectList(flightList, "Text", "Value"), htmlAttributes: new { @class = "form-control BiggerBox", id="IdFlight"})
+                @Html.DropDownListFor(x => Model.IdFlight, new SelectList(flightList, "Text", "Value"), htmlAttributes: new { @class = "form-control BiggerBox", id="IdFlight"})
                 <span asp-validation-for="IdFlight" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="NbSeats" class="control-label text-white BiggerBox"></label>
+                <input asp-for="NbSeats" class="form-control BiggerBox" id="NbSeatsChange" />
+                <span asp-validation-for="NbSeats" class="text-danger"></span>
+            </div>
+            
+            <div class="form-group">
+                <label class="control-label text-white BiggerBox"> Booking amount</label>
+                <input id="AmountCalculation"  class="form-control BiggerBox" readonly="readonly" />
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -64,37 +75,51 @@
 }
 
 
-<script type="text/javascript">
-    $("#IdItinerary").change(function () {
-    var selectedItinerary = $("#IdItineray").val();
-    //var depotDepartSelect = $("#IDDepotDepart");
-    //var depotRetourSelect = $("#IDDepotRetour");
-    //depotDepartSelect.empty();
-    //depotRetourSelect.empty();
-    flightList = $("#IdFlights");
-    flightList.empty(); if (selectedItinerary != null && selectedItinerary != '') {
-    $.getJSON('@Url.Action("GetFlightsByItinerary","Flight")', { idItinerary: selectedItinerary }, function(flights) {
-        if (flights != null)
-            {
-                flightList.append($('<option/>', {
-                value: null,
-                text: "--- Select Flight ---"
-                }));
-                $.each(flight, function (index,flight) {
-                flightList.append($('<option/>', {
-                value: flight.IdFlight,
-                text: "Departure time : "+flight.DepartureTime+" -- Arrival Time : "+flight.ArrivalTime + " (Remaining seats : " + flight.RemainingSeats + ") -- Price : "+flight.Price
-                }));
+    <script type="text/javascript">
+
+        $("#IdItinerary").change(function () {
+            var selectedItinerary = $("#IdItinerary").val();
+            var FlightSelect = $("#IdFlight");
+            FlightSelect.empty();
+
+
+            if (selectedItinerary != null && selectedItinerary != '') {
+                $.getJSON('@Url.Action("GetFlightsByItinerary","Flights")', { idItinerary: selectedItinerary }, function(flights) {
+                        if (flights != null)
+                        {
+                            FlightSelect.append($('<option/>', {
+                                value: null,
+                                text: "--- Select Flight ---"
+                            }));
+                            $.each(flights, function (index,flight) {
+                                FlightSelect.append($('<option/>', {
+                                    value: flight.value,
+                                    text: flight.text
+                                }));
+                            });
+                        }
+                    }
+                );
+            }
+        });
+
+        $("#NbSeatsChange").blur(function() {
+            var Amount = $("#AmountCalculation");
+            var Nbseat = $("#NbSeatsChange").val();
+            var Flight = $("#IdFlight").val();
+            Amount.empty();
+
+            if (Nbseat != null && Nbseat != '' && Flight!= null && Flight != '') {
+                $.getJSON('@Url.Action("GetFlightById","Flights")', { IdFlight: Flight }, function(t) {
+                    
+                    var value = (parseInt(Nbseat) * (t.price));
+                    $("#AmountCalculation").val(value);
                 });
-            }
-            }
-            );
-            }
-            });
+            };
+        });
 
-
+    </script>
     
-</script>
 
 
 }
