--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/Index.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/Index.cshtml
@@ -15,7 +15,8 @@
 <div id="navbar">
     <a id="toggle-data" href="#data"><i class="icon-data"></i>Planets</a>
     <h1> Space Adventures - 3D Solar System<br><span>by <a href="#" target="_blank"></a>Antoine, Corentin and Hammadi</span></h1>
-    <h1 class="text-lg-center" id="home" style="cursor: pointer; font-size: xx-large">Choose a planet where you want to flight</h1>
+    <h1 class="text-lg-center" id="home" style="cursor: pointer; font-size: xx-large">Home Page</h1>
+    <h1 class="text-lg-center" style="cursor: pointer; font-size: xx-large">Choose a planet where you want to fly</h1>
     <a id="toggle-controls" href="#controls"><i class="icon-controls"></i>Controls</a>
 </div>
 
@@ -178,6 +179,8 @@
 
 <script src="~/js/solarsystem.js"></script>
 <script src="~/lib/toastr.js/toastr.min.js"></script>
+<script src="~/js/toast-notifications.js"></script>
+
 
 
 <script>
@@ -187,5 +190,4 @@
 </script>
 
 
-<script src="~/lib/toastr.js/toastr.min.js"></script>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
