--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Clients/GetClients.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Clients/GetClients.cshtml
@@ -1,4 +1,5 @@
-﻿@model Clients
+﻿@using SpaceAdventures.MVC.Models.Enums
+@model Clients
 
 @{
     ViewData["Title"] = "GetClients";
@@ -6,28 +7,31 @@
 
 <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet"/>
 
-<h1 class="m-4 p-4 text-center text-white"></h1>
+<br/><br/>
 
-<p>
-    <a class="btn btn-primary" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Customer</a>
-</p>
+<div id="myHeader" class="text-center mt-5 pt-5 text-white">
+    <h2>Customers</h2>
+</div>
+
+
+@if (@ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
+{
+    <p><a class="btn btn-outline-info btn-sm disabled" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Customer</a></p>
+}
+else
+{
+    <p><a class="btn btn-outline-info btn-sm" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Customer</a></p>
+}
+
+
 <table id="datatable" class="table border rounded">
     <thead class="dataTableColumn">
     <tr>
         <th>Customer ID</th>
         <th>First name</th>
-        <th>
-            Last name
-        </th>
-        <th>
-            Phone
-        </th>
-        <th>
-            Email
-        </th>
-        <th>
-            Membership Type
-        </th>
+        <th>Last name</th>
+        <th>Phone</th>
+        <th>Email</th>
         <th></th>
     </tr>
     </thead>
@@ -47,17 +51,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdMemberShipType)
-            </td>
-            <td>
-                <a class="btn btn-success btn-sm" asp-action="" asp-route-id="@item.IdClient">
-                    <i class="fa-solid fa-pen m-2"></i>
-                </a> |
-                <a class="btn btn-danger btn-sm" asp-action="" asp-route-id="@item.IdClient">
-                    <i class="fa-solid fa-trash m-2"></i>
-                </a>
-            </td>
+            
+    @if (@ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
+    {
+        <td>
+            <a class="btn btn-dark btn-sm" asp-action="" asp-route-id="@item.IdClient"><i class="fa-solid fa-pen m-2"></i></a> |
+            <a class="btn btn-danger btn-sm" asp-action="" asp-route-id="@item.IdClient"><i class="fa-solid fa-trash m-2"></i></a>
+        </td>
+    }
         </tr>
     }
     </tbody>
@@ -66,7 +67,7 @@
 
 @section Scripts
 {
-    <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
-    <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/js/datatable.js"></script>
+    <script src ="~/lib/datatables/js/jquery.dataTables.min.js"></script>
+    <script src ="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+    <script src ="~/js/datatable.js"></script>
 }
