--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Itineraries/GetItineraries.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Itineraries/GetItineraries.cshtml
@@ -1,4 +1,5 @@
-﻿@model Itineraries
+﻿@using SpaceAdventures.MVC.Models.Enums
+@model Itineraries
 
 @{
     ViewData["Title"] = "GetItineraries";
@@ -6,19 +7,29 @@
 
 <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet"/>
 
-<h1 class="m-4 p-4 text-center text-white"></h1>
+<br/><br/>
 
-<p>
-    <a class="btn btn-primary" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Itinerary</a>
-</p>
-<table id="datatable" class="table border rounded">
+<div id="myHeader" class="text-center mt-5 pt-5 text-white">
+    <h2>Itineraries</h2>
+</div>
+
+@if (@ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
+{
+    <p><a class="btn btn-outline-info btn-sm disabled" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Itinerary</a></p>
+}
+else
+{
+    <p><a class="btn btn-outline-info btn-sm" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Itinerary</a></p>
+}
+
+
+<table id="datatable" class="table border rounded mt-5">
     <thead class="dataTableColumn">
     <tr>
         <th>Itinerary ID</th>
-        <th>ID Airport1</th>
-        <th>ID Airport2</th>
+        <th>Departure Airport ID</th>
+        <th>Arrival Airport ID</th>
         <th>Rate</th>
-
         <th></th>
     </tr>
     </thead>
@@ -38,27 +49,27 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Rate)
             </td>
-
-            <td>
-                <a class="btn btn-success btn-sm" asp-action="" asp-route-id="@item.IdItinerary">
-                    <i class="fa-solid fa-pen m-2"></i>
-                </a> |
-                <a class="btn btn-danger btn-sm" asp-action="" asp-route-id="@item.IdItinerary">
-                    <i class="fa-solid fa-trash m-2"></i>
-                </a>
-            </td>
+            
+            @if (@ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
+            {
+                <td><a class="btn btn-dark btn-sm disabled" asp-action="" asp-route-id="@item.IdItinerary"><i class="fa-solid fa-pen m-2"></i></a> |
+                    <a class="btn btn-danger btn-sm disabled" asp-action="" asp-route-id="@item.IdItinerary"><i class="fa-solid fa-trash m-2"></i></a>
+                </td>
+            }
+            else
+            {
+                <td><a class="btn btn-dark btn-sm" asp-action="" asp-route-id="@item.IdItinerary"><i class="fa-solid fa-pen m-2"></i></a> |
+                    <a class="btn btn-danger btn-sm" asp-action="" asp-route-id="@item.IdItinerary"><i class="fa-solid fa-trash m-2"></i></a>
+                </td>
+            }
         </tr>
     }
     </tbody>
 </table>
 
-
 @section Scripts
 {
-
     <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
     <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
     <script src="~/js/datatable.js"></script>
-
-
 }
