--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/CreateUser.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/CreateUser.cshtml
@@ -77,7 +77,7 @@
     $(document).ready(function() {
         $("#selectList").change(function() {
 
-            var value = $('#selectList option:selected').text()
+            var value = $('#selectList option:selected').text();
             
             switch (value) {
                 case "Admin" : 
