--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Airports/GetAirports.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Airports/GetAirports.cshtml
@@ -6,10 +6,14 @@
 
 <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet"/>
 
-<h1 class="m-4 p-4 text-center text-white"></h1>
+<br/><br/>
+
+<div id="myHeader" class="text-center mt-5 pt-5 text-white">
+    <h2>Airports</h2>
+</div>
 
 <p>
-    <a class="btn btn-primary" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Airport</a>
+    <a class="btn btn-outline-info btn-sm" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Airport</a>
 </p>
 <table id="datatable" class="table border rounded">
     <thead class="dataTableColumn">
@@ -34,10 +38,8 @@
             <td>
                 @Html.DisplayFor(modelItem => item.IdPlanet)
             </td>
-
-
             <td>
-                <a class="btn btn-success btn-sm" asp-action="" asp-route-id="@item.IdAirport">
+                <a class="btn btn-dark btn-sm" asp-action="" asp-route-id="@item.IdAirport">
                     <i class="fa-solid fa-pen m-2"></i>
                 </a> |
                 <a class="btn btn-danger btn-sm" asp-action="" asp-route-id="@item.IdAirport">
@@ -52,10 +54,7 @@
 
 @section Scripts
 {
-
-    <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
-    <script src="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
-    <script src="~/js/datatable.js"></script>
-
-
+    <script src ="~/lib/datatables/js/jquery.dataTables.min.js"></script>
+    <script src ="~/lib/datatables/js/dataTables.bootstrap4.min.js"></script>
+    <script src ="~/js/datatable.js"></script>
 }
