--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/GetAllUsers.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/GetAllUsers.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<UserVm>
+﻿@using SpaceAdventures.MVC.Models.Enums
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model IEnumerable<UserVm>
 @{
     ViewData["Title"] = "GetAllUser";
 }
@@ -14,25 +16,22 @@
 
 <hr/>
 
-<p>
-<a class="btn btn-info" asp-action="CreateUser"> <i class="fa-solid fa-plus"></i> Add New User</a>
-</p>
+
+@if (ViewContext.HttpContext.Session.GetString("Role") == RolesType.Owner.ToString())
+{
+    <p>
+        <a class="btn btn-outline-info btn-sm" asp-action="CreateUser"> <i class="fa-solid fa-plus"></i> Add New User</a>
+    </p>
+}
+
 <table id="datatable" class="table border rounded">
     <thead class="dataTableColumn">
     <tr>
-            <th>
-                Username
-            </th>
-            <th>
-                Email
-            </th>
-            <th>
-                Role
-            </th>
-            <th>
-
-            </th>
-        </tr>
+        <th>Username</th>
+        <th>Email</th>
+        <th>Role</th>
+        <th></th>
+    </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
@@ -46,15 +45,17 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Role)
             </td>
+          @if (ViewContext.HttpContext.Session.GetString("Role") == RolesType.Owner.ToString())
+            {
             <td>
-                 <a class="btn btn-dark btn-sm" asp-action="UpdateUser" asp-route-Email="@item.Email">
+                <a class="btn btn-dark btn-sm" asp-action="UpdateUser" asp-route-Email="@item.Email">
                     <i class="fa-solid fa-pen m-2"></i>
                 </a> |
                 <a class="btn btn-danger btn-sm" asp-action="DeleteUser" asp-route-email ="@item.Email">
                     <i class="fa-solid fa-trash m-2"></i>
                 </a>
-                
             </td>
+            }
         </tr>
 }
     </tbody>
