Roles | Buttons | Background

--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Itineraries/GetItineraries.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Itineraries/GetItineraries.cshtml
@@ -58,8 +58,8 @@ else
             }
             else
             {
-                <td><a class="btn btn-dark btn-sm" asp-action="" asp-route-id="@item.IdItinerary"><i class="fa-solid fa-pen m-2"></i></a> |
-                    <a class="btn btn-danger btn-sm" asp-action="" asp-route-id="@item.IdItinerary"><i class="fa-solid fa-trash m-2"></i></a>
+                <td><a class="btn btn-dark btn-sm"  asp-route-id="@item.IdItinerary"><i class="fa-solid fa-pen m-2"></i></a> |
+                    <a class="btn btn-danger btn-sm"  asp-route-id="@item.IdItinerary"><i class="fa-solid fa-trash m-2"></i></a>
                 </td>
             }
         </tr>
