--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Aircrafts/GetAircrafts.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Aircrafts/GetAircrafts.cshtml
@@ -13,11 +13,13 @@
     <h2>Aircrafts</h2>
 </div>
 
-@if(ViewContext.HttpContext.Session.GetString("Role") != RolesType.Agent.ToString())
+@if(ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
 {
-    <p>
-        <a class="btn btn-outline-info btn-sm" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Aircraft</a>
-    </p>
+    <p><a class="btn btn-outline-info btn-sm disabled" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Aircraft</a></p>
+}
+else
+{
+    <p><a class="btn btn-outline-info btn-sm" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Aircraft</a></p>
 }
 
 <table id="datatable" class="table border rounded">
@@ -46,15 +48,22 @@
             <td>
                 @Html.DisplayFor(modelItem => item.NumberOfSeats)
             </td>
+            
 
+        @if (ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
+        {
             <td>
-                <a class="btn btn-dark btn-sm" asp-action="" asp-route-id="@item.IdAircraft">
-                    <i class="fa-solid fa-pen m-2"></i>
-                </a> |
-                <a class="btn btn-danger btn-sm" asp-action="" asp-route-id="@item.IdAircraft">
-                    <i class="fa-solid fa-trash m-2"></i>
-                </a>
+                <a class="btn btn-dark btn-sm disabled" asp-action="" asp-route-id="@item.IdAircraft"><i class="fa-solid fa-pen m-2"></i></a> |
+                <a class="btn btn-danger btn-sm disabled" asp-action="" asp-route-id="@item.IdAircraft"><i class="fa-solid fa-trash m-2"></i></a>
             </td>
+        }
+        else
+        {
+            <td>
+                <a class="btn btn-dark btn-sm" asp-route-id="@item.IdAircraft"><i class="fa-solid fa-pen m-2"></i></a> |
+                <a class="btn btn-danger btn-sm" asp-route-id="@item.IdAircraft"><i class="fa-solid fa-trash m-2"></i></a>
+            </td>
+        }
         </tr>
     }
     </tbody>
