--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Airports/GetAirports.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Airports/GetAirports.cshtml
@@ -1,4 +1,5 @@
-﻿@model Airports
+﻿@using SpaceAdventures.MVC.Models.Enums
+@model Airports
 
 @{
     ViewData["Title"] = "GetAirports";
@@ -12,9 +13,18 @@
     <h2>Airports</h2>
 </div>
 
-<p>
-    <a class="btn btn-outline-info btn-sm" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Airport</a>
-</p>
+
+
+@if (ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
+{
+    <p><a class="btn btn-outline-info btn-sm disabled" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Airport</a></p>
+}
+else
+{
+    <p><a class="btn btn-outline-info btn-sm" asp-action=""> <i class="fa-solid fa-plus"></i> Add New Airport</a></p>
+}
+
+
 <table id="datatable" class="table border rounded">
     <thead class="dataTableColumn">
     <tr>
@@ -38,14 +48,20 @@
             <td>
                 @Html.DisplayFor(modelItem => item.IdPlanet)
             </td>
-            <td>
-                <a class="btn btn-dark btn-sm" asp-action="" asp-route-id="@item.IdAirport">
-                    <i class="fa-solid fa-pen m-2"></i>
-                </a> |
-                <a class="btn btn-danger btn-sm" asp-action="" asp-route-id="@item.IdAirport">
-                    <i class="fa-solid fa-trash m-2"></i>
-                </a>
-            </td>
+    @if (ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
+    {
+        <td>
+            <a class="btn btn-dark btn-sm disabled" asp-route-id="@item.IdAirport"><i class="fa-solid fa-pen m-2"></i></a> |
+            <a class="btn btn-danger btn-sm disabled" asp-route-id="@item.IdAirport"><i class="fa-solid fa-trash m-2"></i></a>
+        </td>
+    }
+    else
+    {
+        <td>
+            <a class="btn btn-dark btn-sm" asp-route-id="@item.IdAirport"><i class="fa-solid fa-pen m-2"></i></a> |
+            <a class="btn btn-danger btn-sm" asp-route-id="@item.IdAirport"><i class="fa-solid fa-trash m-2"></i></a>
+        </td>
+    }
         </tr>
     }
     </tbody>
