--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/Index.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Booking/Index.cshtml
@@ -11,7 +11,7 @@
 
 <span id="message" class="d-none"> @TempData["Message"]</span>
 
-<body class="opening hide-UI view-2D zoom-large data-close controls-close">
+<body class="opening hide-UI view-2D zoom-large data-close controls-close bg">
 <div id="navbar">
     <a id="toggle-data" href="#data"><i class="icon-data"></i>Planets</a>
     <h1> Space Adventures - 3D Solar System<br><span>by <a href="#" target="_blank"></a>Antoine, Corentin and Hammadi</span></h1>
