--- a/SpaceAdventures/SpaceAdventures.MVC/Views/Clients/GetClients.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/Clients/GetClients.cshtml
@@ -55,8 +55,15 @@ else
     @if (@ViewContext.HttpContext.Session.GetString("Role") == RolesType.Agent.ToString())
     {
         <td>
-            <a class="btn btn-dark btn-sm" asp-action="" asp-route-id="@item.IdClient"><i class="fa-solid fa-pen m-2"></i></a> |
-            <a class="btn btn-danger btn-sm" asp-action="" asp-route-id="@item.IdClient"><i class="fa-solid fa-trash m-2"></i></a>
+            <a class="btn btn-dark btn-sm disabled" asp-route-id="@item.IdClient"><i class="fa-solid fa-pen m-2"></i></a> |
+            <a class="btn btn-danger btn-sm disabled" asp-route-id="@item.IdClient"><i class="fa-solid fa-trash m-2"></i></a>
+        </td>
+    }
+    else
+    {
+        <td>
+            <a class="btn btn-dark btn-sm" asp-route-id="@item.IdClient"><i class="fa-solid fa-pen m-2"></i></a> |
+            <a class="btn btn-danger btn-sm" asp-route-id="@item.IdClient"><i class="fa-solid fa-trash m-2"></i></a>
         </td>
     }
         </tr>
