--- a/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UpdateUser.cshtml
+++ b/SpaceAdventures/SpaceAdventures.MVC/Views/UserManagement/UpdateUser.cshtml
@@ -4,9 +4,10 @@
     ViewData["Title"] = "UpdateUser";
 }
 
-<h1>UpdateUser</h1>
-
-<h4>UserDto</h4>
+<div id="myHeader" class="text-center mt-5 pt-5 text-white">
+    <h1 class="display-4">Space Adventures</h1>
+    <h2>Updating an internal user</h2>
+</div>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -25,19 +26,19 @@
 
 
             <div class="form-group">
-                <label asp-for="Username" class="control-label"></label>
+                <label asp-for="Username" class="control-label text-white"></label>
                 <input asp-for="Username" class="form-control" />
                 <span asp-validation-for="Username" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
+                <label asp-for="Email" class="control-label text-white"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
        
             <div class="form-group">
-                <label asp-for="IdRole" class="control-label"></label>
+                <label asp-for="IdRole" class="control-label text-white"></label>
                 @*<select id="selectList" class="form-control" asp-items="@(new SelectList(ViewBag.ListRole, "Value", "Text"))">
                         <option selected>------------------Select a role-------------------</option>
                     </select>*@
@@ -45,7 +46,7 @@
                 <span asp-validation-for="IdRole" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <p class="text-white" > Role actuel : @ViewBag.roleName </p>
+                <p class="text-white" > Current Role : @ViewBag.roleName </p>
             </div>
 
             <div class="form-group">
